tests/ui/method_for_unknown_resource.rs
#[macro_use] extern crate gotham_restful;

#[read_all(UnknownResource)]
fn read_all()
{
}

fn main()
{
}
